Barre de Navigation Responsive

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
   <title>Salle de Gym</title>
 </head>
 <body>
+  <!-- Navigation -->
   <nav>
-<<<<<<< HEAD
-    <li>Acceuil</li>
-    <li>Tarif</li>
-=======
-    <li></li>
-    <li></li>
->>>>>>> main
-    <li></li>
+    <ul>
+      <li><a href="#" class="item-navigation">Accueil</a></li>
+      <li><a href="#" class="item-navigation">Matériels</a></li>
+      <li><a href="#" class="item-navigation">Tarifs</a></li>
+      <li><a href="#" class="item-navigation">Contact</a></li>
+    </ul>
   </nav>
 
   <script src="app.js"></script>
