Acceuil Fondu bloc left

--- a/index.html
+++ b/index.html
@@ -18,6 +18,23 @@
     </ul>
   </nav>
 
+<!-- Acceuil -->
+
+<div class="acceuil" id="home">
+  <div class="bloc-gauche-acceuil">
+    <h1>GYM YANKI</h1>
+    <p>Dépassez vos limites</p>
+    <p>Entrainez-vous.</p>
+    <p>Progressez.</p>
+    <div class="cont-btn-home">
+      <a href="#" class="btn-acceuil b1">Equipements</a>
+      <a href="#" class="btn-acceuil b2">Contact</a>
+    </div>
+  </div>
+  <div class="bloc-droit-acceuil">
+
+  </div>
+</div>
   <script src="app.js"></script>
 </body>
 </html>
