section carte info

--- a/index.html
+++ b/index.html
@@ -35,6 +35,39 @@
     
   </div>
 </div>
+
+<!-- Section Infos -->
+
+<h2 class="titre-section-info">SE (RE) PRENDRE EN MAIN</h2>
+
+<section class="section-info" id="infos">
+    <div class="carte-info">
+      <div class="container-photo-info">
+        <img src="ressources/img-info-1.jpg" alt="image femme faisant le sport">
+      </div>
+      <h2>Faire partie d'un groupe</h2>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+        Deleniti animi corrupti libero reiciendis qui est?</p>
+    </div>
+
+    <div class="carte-info">
+      <div class="container-photo-info">
+        <img src="ressources/img-info-2.jpg" alt="image homme faisant le sport">
+      </div>faisant le 
+      <h2>Atteindre ses objectifs</h2>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+        Deleniti animi corrupti libero reiciendis qui est?</p>
+    </div>
+
+    <div class="carte-info">
+      <div class="container-photo-info">
+        <img src="ressources/img-info-3.jpg" alt="image une cage à squat">
+      </div>
+      <h2>Exploser ses limites</h2>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+        Deleniti animi corrupti libero reiciendis qui est?</p>
+    </div>
+</section>
   <script src="app.js"></script>
 </body>
 </html>
