Css Section Info and media Query

--- a/index.html
+++ b/index.html
@@ -48,12 +48,13 @@
       <h2>Faire partie d'un groupe</h2>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
         Deleniti animi corrupti libero reiciendis qui est?</p>
+        <img src="ressources/points.png" alt="image point deco" class="deco-info">
     </div>
 
     <div class="carte-info">
       <div class="container-photo-info">
         <img src="ressources/img-info-2.jpg" alt="image homme faisant le sport">
-      </div>faisant le 
+      </div> 
       <h2>Atteindre ses objectifs</h2>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
         Deleniti animi corrupti libero reiciendis qui est?</p>
